# parallel_computing_project

./: CMakeLists.txt  CMakeLists_Server.txt  README.md  benchmark_manager.py  data_plot.py  final_result.csv  jupiter_result.csv  result.csv  saturn_result.csv  saturn_vec_result.csv  total_result.csv
Project_ssh/: CMakeLists.txt  README.md
Project_ssh/cilk/: cilk_solution.h
Project_ssh/definitions/: shared.c
Project_ssh/mpi/: batch.job  mpi_solution.c  mpi_solution.h
Project_ssh/openmp/: openmp_solution.c  openmp_solution.h
Project_ssh/pthread/: pthread_barrier_osx.h  pthread_solution.c
Project_ssh/sequential/: sequential_solution.c
Project_ssh/tests/: test_generator.c  test_runner.c  test_runner.h  test_stencil.c  test_stencil.h
Project_ssh/tests/test_cases/: test_big_matrix.c  test_big_matrix.h  test_constant_matrix.c  test_constant_matrix.h  test_simple_matrix.c
cilk/: cilk_solution.c  cilk_solution.h
definitions/: shared.c  shared.h
mpi/: CMakeLists.txt  CMakeLists_Server.txt  benchmark_manager.py  commands.txt  commands3.txt  mpi_solution.c  mpirun  result.csv
mpiresult/: final_result.csv  merged_file.csv
old/: final_result.csv
openmp/: openmp_solution.c  openmp_solution.h
pthread/: pthread_barrier_osx.c  pthread_barrier_osx.h  pthread_solution.c  pthread_solution.h
res/: commands2.txt
res/backup/: final_result.csv
sequential/: sequential.c  sequential.h  sequential_solution.c  sequential_solution.h
tests/: benchmark_runner.c  benchmark_runner.h  test_generator.h  test_runner.c  test_runner.h  test_stencil.c  test_stencil.h
tests/test_cases/: test_big_matrix.c  test_constant_matrix.c  test_simple_matrix.c  test_simple_matrix.h
